--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1>KG FASHION</h1>
 <h2><a href="über.html">ÜBER</a></h2>
+<h2><a href="credits.html">DANKSAGUNG</a></h2>
 <h2><a href="produkte.html">PRODUKTE</a></h2>
 <h2><a href="bestellung.html">BESTELLUNG</a></h2>
 
